<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Oscilloscope</string>
  <string name="short_name">Scope</string>
  <string name="spectrum">Spectrum</string>
  <string name="settings">Settings</string>
  <string name="built">Built %s</string>
  <string name="copyright">Copyright \u00A9 2017 <a
  href="https://billthefarmer.github.io">Bill Farmer</a>
  </string>
  <string name="licence">Licence <a
  href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

  <string name="error_buffer">
    Error from audio recording! Cannot find a working input sample
    rate.
  </string>
  <string name="error_init">
    Audio recorder not initialised! Maybe the selected input source is
    not available, or a working input sample rate could not be found.
  </string>

  <string name="action_bright_line">Bright Line</string>
  <string name="action_single_shot">Single Shot</string>
  <string name="action_trigger">Trigger</string>
  <string name="action_timebase">Timebase</string>
  <string name="action_storage">Storage</string>
  <string name="action_clear">Clear</string>
  <string name="action_left">Left</string>
  <string name="action_right">Right</string>
  <string name="action_start">Start</string>
  <string name="action_end">End</string>
  <string name="action_spectrum">Spectrum</string>
  <string name="action_help">Help</string>
  <string name="action_lock">Lock</string>
  <string name="action_settings">Settings</string>

  <string name="tb0.1ms">0.1 ms</string>
  <string name="tb0.2ms">0.2 ms</string>
  <string name="tb0.5ms">0.5 ms</string>
  <string name="tb1.0ms">1.0 ms</string>
  <string name="tb2.0ms">2.0 ms</string>
  <string name="tb5.0ms">5.0 ms</string>
  <string name="tb10ms">10 ms</string>
  <string name="tb20ms">20 ms</string>
  <string name="tb50ms">50 ms</string>
  <string name="tb0.1sec">0.1 sec</string>
  <string name="tb0.2sec">0.2 sec</string>
  <string name="tb0.5sec">0.5 sec</string>

  <string name="bright_on">Bright line on</string>
  <string name="bright_off">Bright line off</string>
  <string name="single_on">Single shot on</string>
  <string name="single_off">Single shot off</string>
  <string name="storage_on">Storage on</string>
  <string name="storage_off">Storage off</string>
  <string name="lock_on">Display lock on</string>
  <string name="lock_off">Display lock off</string>

  <string name="pref_input_category">Input</string>

  <string name="pref_input">Input source</string>
  <string name="pref_input_summ">%s"</string>

  <string name="pref_display">Display</string>

  <string name="pref_fill">Fill</string>
  <string name="pref_fill_summ">Fill spectrum trace</string>

  <string name="pref_hold">Hold</string>
  <string name="pref_hold_summ">Hold spectrum trace</string>

  <string name="pref_screen">Screen</string>
  <string name="pref_screen_summ">Keep screen on</string>

  <string name="pref_theme">Theme</string>
  <string translatable="false" name="pref_theme_summ">%s</string>

  <string name="pref_dark">Dark Theme</string>
  <string name="pref_dark_summ">Use Dark Theme</string>

  <string name="pref_about">About</string>
  <string name="pref_about_summ"><a href="https://github.com/billthefarmer/scope/releases/latest">Version %s</a></string>

</resources>
