<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings">

  <PreferenceCategory
      android:key="pref_input_category"
      android:title="@string/pref_input_category">

    <ListPreference
	android:key="pref_input"
	android:icon="?attr/pref_input"
	android:dialogIcon="?attr/pref_input"
	android:title="@string/pref_input"
	android:summary="@string/pref_input_summ"
	android:entries="@array/pref_input_entries"
	android:entryValues="@array/pref_input_entry_values"
	android:defaultValue="@integer/def_input" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_display_category"
      android:title="@string/pref_display">

    <CheckBoxPreference
	android:key="pref_fill"
	android:icon="?attr/pref_fill"
	android:title="@string/pref_fill"
	android:summary="@string/pref_fill_summ"
	android:persistent="true"
	android:defaultValue="true" />

    <CheckBoxPreference
	android:key="pref_screen"
	android:icon="?attr/pref_screen"
	android:title="@string/pref_screen"
	android:summary="@string/pref_screen_summ"
	android:persistent="true"
	android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_theme_category"
      android:title="@string/pref_theme">

    <CheckBoxPreference
	android:key="pref_dark"
	android:icon="?attr/pref_dark"
	android:title="@string/pref_dark"
	android:summary="@string/pref_dark_summ"
	android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/pref_about">

    <org.billthefarmer.scope.AboutPreference
	android:key="pref_about"
	android:icon="?attr/pref_about"
	android:dialogIcon="?attr/pref_about"
	android:negativeButtonText=""
	android:title="@string/pref_about"
	android:summary="@string/pref_about_summ"
	android:dialogLayout="@layout/about_dialog" />

  </PreferenceCategory>

</PreferenceScreen>
